language/move-lang/tests/move_check/translated_ir_tests/move/commands/return_type_mismatch_and_unused_resource.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/return_type_mismatch_and_unused_resource.move:7:9 ───
   │
 7 │         false
   │         ^^^^^ Invalid return
   ·
 5 │         let x = X {};
   │             - The local 'x' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
   ·
 5 │         let x = X {};
   │                 ---- The type '0x8675309::M::X' does not have the ability 'drop'
   ·
 2 │     struct X {}
   │            - To satisify the constraint, the 'drop' ability would need to be added here
   │

error: 

    ┌── tests/move_check/translated_ir_tests/move/commands/return_type_mismatch_and_unused_resource.move:13:9 ───
    │
 13 │         r
    │         ^ Invalid return. Local 'u' is still being borrowed.
    ·
 12 │         let r = &u;
    │                 -- It is still being borrowed by this reference
    │

